<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/drawer_group_content">
        <menu>
            <item
                android:id="@+id/drawer_zhihu"
                android:checkable="true"
                android:checked="true"
                android:enabled="true"
                android:icon="@mipmap/ic_drawer_zhihu"
                android:title="@string/zhihu"
                android:visible="true" />
            <item
                android:id="@+id/drawer_wechat"
                android:checkable="true"
                android:icon="@mipmap/ic_drawer_wechat"
                android:title="@string/wechat"
                android:visible="true" />
            <item
                android:id="@+id/drawer_gank"
                android:checkable="true"
                android:enabled="true"
                android:icon="@mipmap/ic_drawer_gank"
                android:title="@string/gank"
                android:visible="true" />
            <item
                android:id="@+id/drawer_gold"
                android:checkable="true"
                android:enabled="true"
                android:icon="@mipmap/ic_drawer_gold"
                android:title="@string/gold"
                android:visible="true" />
            <item
                android:id="@+id/drawer_vtex"
                android:checkable="true"
                android:enabled="true"
                android:icon="@mipmap/ic_drawer_vtex"
                android:title="@string/vtex"
                android:visible="true" />
        </menu>
    </item>
    <item android:title="@string/drawer_group_options" >
        <menu >
            <item
                android:id="@+id/drawer_like"
                android:checkable="true"
                android:enabled="true"
                android:icon="@mipmap/ic_drawer_like"
                android:title="@string/drawer_collection"
                android:visible="true" />
            <item
                android:id="@+id/drawer_setting"
                android:checkable="true"
                android:enabled="true"
                android:icon="@mipmap/ic_drawer_setting"
                android:title="@string/drawer_setting"
                android:visible="true" />
            <item
                android:id="@+id/drawer_about"
                android:checkable="true"
                android:enabled="true"
                android:icon="@mipmap/ic_drawer_about"
                android:title="@string/drawer_about"
                android:visible="true" />
        </menu>
    </item>


</menu>